# qtutility

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_build.yml
include/: library_test.hpp
include/QtUtility/file/: file.hpp
include/QtUtility/media/: media.hpp
include/QtUtility/widgets/: qcollapsible_widget.hpp
include/data/job_queue/: job_queue.h  job_queue.tpp
include/file/: file.hpp
include/media/: media.hpp
include/python/: py_process.hpp
job_queue/: JobQueue.cpp  JobQueue.h  JobQueue.tpp
qml/: Constants.hpp  README.md  Settings.cpp  Settings.hpp
qml/project_structure/: CMakeLists.txt
qml/project_structure/resources/: images.qrc
resources/: resources.qrc
src/: library_test.cpp
src/data/job_queue/: job_queue.cpp
src/file/: file.cpp
src/media/: media.cpp
src/python/: py_process.cpp
src/widgets/: qcollapsible_widget.cpp  qimage_gallery.cpp
tests/: test_example.cpp  test_file.cpp
